kubernetes/dev/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-flight-service-deployment
  namespace: dev
  labels:
    env: dev
    app: flight-service
    layer: frontend
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
    type: RollingUpdate
  selector:
    matchLabels:
      env: dev
      app: flight-service
      layer: frontend
  template:
    metadata:
      labels:
        env: dev
        app: flight-service
        layer: frontend
    spec:
      serviceAccountName: dev-flight-service-sa
      containers:
        - name: flight-service
          image: 533267238276.dkr.ecr.ap-south-1.amazonaws.com/flight-service:<latest>
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: dev-flight-service-application-config
